# aquarium

./: .gitignore  BUILD.gn  CMakeLists.txt  README.md  aquarium.data  build.sh  deploy.sh  index.html
.github/workflows/: main.yml
aquarium-webgl/: index.html
aquarium-webgl-simd/: index.html
aquarium-webgpu/: index.html
assets/: SunknShipBoxes.js  SunknShipDeck.js  SunknShipHull.js
shaders/dawn/: imguiFragmentShader  imguiVertexShader
shaders/opengl/450/: diffuseFragmentShader  diffuseVertexShader  fishNormalMapFragmentShader  fishReflectionFragmentShader  fishVertexShader  innerRefractionMapFragmentShader  innerRefractionMapVertexShader  normalMapFragmentShader  normalMapVertexShader  reflectionMapFragmentShader  reflectionMapVertexShader  seaweedFragmentShader  seaweedVertexShader
src/aquarium-direct-map/: Main.cpp
src/aquarium-optimized/: Aquarium.cpp  Aquarium.h  BufferManager.h  Context.cpp  Context.h  ContextFactory.cpp  Main.cpp  ResourceHelper.cpp
src/aquarium-optimized/d3d12/: BufferD3D12.cpp  ContextD3D12.cpp  ContextD3D12.h  FishModelD3D12.cpp  FishModelInstancedDrawD3D12.cpp  GenericModelD3D12.cpp  InnerModelD3D12.cpp  OutsideModelD3D12.cpp  OutsideModelD3D12.h  SeaweedModelD3D12.cpp
src/aquarium-optimized/dawn/: BufferDawn.cpp  BufferManagerDawn.cpp  BufferManagerDawn.h  ContextDawn.cpp  ContextDawn.h  ContextEmscripten.cpp  FishModelDawn.cpp  FishModelInstancedDrawDawn.cpp  GenericModelDawn.cpp  InnerModelDawn.cpp  OutsideModelDawn.cpp  SeaweedModelDawn.cpp  TextureDawn.cpp  imgui_impl_dawn.h
src/aquarium-optimized/opengl/: ContextGL.cpp  FishModelGL.h
src/common/: FPSTimer.cpp
src/include/: CmdArgsHelper.h
src/web/: index.html
webgl/: aquarium.js  aquarium.wasm  index.html
webgl-simd/: aquarium.js  aquarium.wasm
webgpu/: aquarium.js  aquarium.wasm  index.html
